--- a/src/main/webapp/index.html
+++ b/src/main/webapp/index.html
@@ -5,7 +5,7 @@
   <title>Test Page</title>
 </head>
 <body>
-<p>This is a test Alexis ça remarche ?</p>
+<p>This is a test Alexis ça remarche test ?</p>
 <p>This is a test 44566?</p>
 </body>
 </html>
