--- a/src/main/webapp/states/root.login/login.html
+++ b/src/main/webapp/states/root.login/login.html
@@ -1,13 +1,26 @@
-<div id="loginView">
-<link rel="stylesheet" type="text/css" href="login.css">
+<div id="loginState">
 <form class="form-signin">
-        <h2 class="form-signin-heading">Login with zen account</h2>
-        <input data-ng-model="loginView.credentials.email" type="email" class="form-control" placeholder="Email address" autofocus>
-        <input data-ng-model="loginView.credentials.password" type="password" class="form-control" placeholder="Password">
-        <label>Sign up</label><br/>
-        <label>Lost password?</label>
-        <button data-ng-click="loginView.helloworld()" class="btn btn-lg btn-primary btn-block">Login</button><br/>
-        <h2 class="form-signin-heading">Login with Google</h2><br/>
-        <div class="g-signin2" data-onsuccess="loginView.loginGoogle(googleUser)" data-theme="dark"></div>
+        <h3 class="form-signin-heading">Login with zen account</h3>
+        <br></br>
+        <input data-ng-model="loginState.credentials.email" type="email" class="form-control" placeholder="Email address" autofocus></input>
+        <input data-ng-model="loginState.credentials.password" type="password" class="form-control" placeholder="Password"></input>
+        <div class="alert alert-danger" data-ng-show="loginState.status === 'invalidCredentials'" role="alert">
+  			<a class="alert-link">
+  				Incorrect email or password.
+  			</a>
+		</div>
+		<div class="alert alert-warning" data-ng-show="loginState.status === 'error'" role="alert">
+  			<a class="alert-link">
+  				The server is not responding.
+  			</a>
+		</div>
+        <div class="input-group">
+        	<input data-ng-model="loginState.rememberMe" type="checkbox" aria-label="..."></input>
+        	<span> RememberMe</span>
+    	</div>
+    	<br></br>
+        <!--label>Sign up</label><br/>
+        <label>Lost password?</label-->
+        <button data-ng-click="loginState.login()" class="btn btn-lg btn-primary btn-block">Login</button>
 </form>
 </div>
